2005-02-22  John W. Eaton  <jwe@octave.org>

	* parse.y (POW, EPOW): Use %left associativity for compatibility.

	* ov-base-int.cc (octave_baes_int_matrix<T>::load_binary):
	Handle arrays with only one dimension.
	* ov-bool-mat.cc (octave_bool_matrix::load_binary): Likewise.
	* ov-cell.cc (octave_cell::load_binary): Likewise.
	* ov-cell.cc (octave_complex_matrix::load_binary): Likewise.
	* ov-re-mat.cc (octave_matrix::load_binary): Likewise.
	* ov-str-mat.cc (octave_char_matrix_str::load_binary): Likewise.

	* ov-mapper.cc (octave_mapper::subsref): Return retval after
	calling next_subsref.

	* ov-mapper.cc (octave_builtin::subsref): If nargout is 0 and we
	have additional indexing to perform, set it to 1 before calling
	do_multi_index_op.

	* oct-map.cc (Octave_map::intfield, Octave_map::stringfield):
	New functions.
	* oct-map.h: Provide decls.
	* DLD-FUNCTIONS/time.cc (extract_tm): Use intfield and stringfield
	to access map elements.

2005-02-21  John W. Eaton  <jwe@octave.org>

	* ov-builtin.cc (octave_builtin::subsref): If nargout is 0 and we
	have additional indexing to perform, set it to 1 before calling
	do_multi_index_op.
	* ov-usr-fcn.cc (octave_user_function::subsref): Likewise.

	* DLD-FUNCTIONS/gplot.l (send_to_plot_stream):
	Replot with no previous plot is a no-op.
	(makeplot): Likewise.
	(Vautomatic_replot): Don't use this variable in low-level functions.

2005-02-18  John W. Eaton  <jwe@octave.org>

	* Makefile.in (oct-gperf.h): Remove -E from list of gperf options.

	* data.cc (do_permute): Use zero-based indexing for permutation
	vector that is passed to octave_value::permute method.
	Allow permutation vector longer	than number of dimenensions of
	permuted matrix.

2005-02-17  John W. Eaton  <jwe@octave.org>

	* version.h (OCTAVE_API_VERSION): Now 2.1.64-cvs.
	(OCTAVE_API_VERSION): Now api-v12-cvs.

2005-02-16  John W. Eaton  <jwe@octave.org>

	* ov-base-mat.h (octave_base_matrix::squeeze): Explicitly convert
	result of matrix.squeeze() to MT.
